<resources>
    <string name="app_name">EnJoyn</string>
    <string name="Login">Login</string>
    <string name="WelcomeTextRegister">Registrati:</string>
    <string name="DoneLogin">Hai gia fatto il login?</string>
    <string name="StringTooLong">Troppo lungo</string>
    <string name="Stringnull">Campo obbligatorio</string>
    <string name="InsertNumbers">Inserisci solo numeri</string>
    <string name="DiscoverButton">Scopri</string>
    <string name="FriendsButton">Amici</string>
    <string name="ProfileButton">Profilo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Modifica</string>
    <string name="Description">Descrizione</string>
    <string name="NameSurname">Nome Cognome</string>
    <string name="ButtonShare">Bottone Condividi</string>
    <string name="ActivityName">Nome Attività</string>
    <string name="NumberOfParticipants">N</string>
    <string name="Date">Data</string>
    <string name="Time">Orario</string>
    <string name="Street">Via</string>
    <string name="Join">Unisciti</string>
    <string name="Tag">Tag</string>
    <string name="Title">Titolo</string>
    <string name="Select">seleziona</string>


    <string name="appName">EnJoyn</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Hai dimenticato la password?</string>
    <string name="clickHere"> <u>Clicca qui</u></string>
    <string name="notRegister">Non sei registrato?</string>
    <string name="register">Registrati</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="imagePassword">TODO</string>
    <string name="confirmPassword">Conferma password</string>
    <string name="username">Username</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="phoneNumber">Telefono</string>
    <string name="eventAddedToTodo">evento aggiunto ai ToDo</string>
    <string name="eventRemovedFromTodo"> evento rimosso dai ToDo</string>
    <string name="insertName">Nome</string>
    <string name="Register">Registrati</string>
    <string name="buttonLogin"><u>Login</u></string>
    <string name="doneLogin">Ti sei già registrato??</string>
    <string name="numberMissingPassword">inserisci almeno un numero</string>
    <string name="upperCaseMissingPassword">inserisci almeno una lettera maiuscola</string>
    <string name="specialCharacterMissingPassword">inserisci almeno un carattere speciale</string>
    <string name="tooShortPassword">Password troppo corta, almeno di 8 caratteri</string>
    <string name="passwordNotEqual">Password non uguali</string>
    <string name="stringTooLong">Troppo lungo</string>
    <string name="stringNull">Campo obbligatorio</string>
    <string name="notSerious">FAI IL SERIO</string>
    <string name="insertNumbers">Inserisci solo numeri</string>
    <string name="discoverButton">Scopri</string>
    <string name="todoButton">ToDo</string>
    <string name="newEventButton">Nuovo</string>
    <string name="friendsButton">Amici</string>
    <string name="profileButton">Profilo</string>
    <string name="description">Descrizione</string>
    <string name="nameSurname">Nome Cognome</string>
    <string name="buttonShare">Bottone Condividi</string>
    <string name="propic">Immagine del profilo</string>
    <string name="editPropic">Modifica immagine</string>
    <string name="describeYourself">Raccontaci di te…</string>
    <string name="skip">Salta</string>
    <string name="next">Avanti</string>
    <string name="confirmEmail">CONFERMA MAIL</string>
    <string name="textRegistrationCodeSubtitles">Per confermare il tuo profilo, premi il link che hai ricevuto tramite mail</string>
    <string name="pinviewDescription">Prova</string>
    <string name="tapHere">premi qui</string>
    <string name="signup_successful"> Registrazione avvenuta correttamente </string>
    <string name="new_email_sent"> È stata inviata una nuova mail di conferma</string>


    <string name="helloBlankFragment">Hello blank fragment</string>
    <string name="appLogo">Immagine rappresentante il logo dell\'applicazione</string>
    <string name="insertMailPasswordReset">Per poter ripristinare la password, inserisci l\'email associata al tuo account</string>
    <string name="passwordReset">Ripristino password</string>
    <string name="alreadyHasAccount">Hai già un account?</string>
    <string name="resetHere">Ripristinala qui</string>
    <string name="email_sent_to_specified_address"> Inviata una mail di ripristino password all\'indirizzo specificato</string>

    <!-- Qui ci sono le stringhe che sono state ricontrollate e sono corrette-->
    <string name="whitespaceNotAllowed">Gli spazi non sono ammessi</string>
    <string name="newCode">Per generare un nuova nuova mail</string>
    <string name="backToLogin">Torna al login</string>
    <string name="usernameAlreadyInUse">Username già in uso</string>
    <string name="emailAlreadyInUse">Email già in uso</string>
    <string name="registrationFailed">Registrazione fallita</string>
    <string name="authenticationFailed">Autenticazione fallita</string>
    <string name="refresh">Aggiorna</string>

    <string name="favorites">Preferiti</string>
    <string name="bottonAddToFavorites">Bottone aggiungi ai preferiti</string>
    <string name="remove">Rimuovi</string>
    <string name="eventAddToDo">Evento aggiunto al ToDo</string>
    <string name="eventRemoveToDo">Evento rimosso dal ToDo</string>
    <string name="mapbox_access_token">sk.eyJ1IjoicmVhbHB5bmNpIiwiYSI6ImNscnFtaGhhOTA1NWQybG56aXRqNHptM2wifQ.hw772niii39PmdUPCFB99A</string>
    <string name="Create_event">Crea evento</string>
    <string name="one">1</string>
    <string name="map">Mappa</string>
    <string name="list">Lista</string>
    <string name="buttonDate">buttonDate</string>
    <string name="buttonToMap">buttonToMap</string>
    <string name="buttonTime">buttonTime</string>
    <string name="imageWeather">imageWeather</string>
    <string name="temperature">temperature</string>
    <string name="search">Cerca</string>
    <string name="positioningEvent">Seleziona il luogo</string>
    <string name="Location">località</string>
    <string name="km">km</string>
    <string name="category">Categoria :</string>
    <string name="place">Luogo</string>
    <string name="save">Salva</string>
    <string name="background">background</string>
    <string name="image">image</string>
    <string name="UserImageEvent">Immagine scelta dall\'utente per l\'evento</string>
    <string name="peopleNumber">number of people</string>
    <string name="interests">Interessi</string>
    <string name="annulla">Annulla</string>
    <string name="addUser">Aggiungi</string>
    <string name="ligthBlue">Ligth Blue</string>
    <string name="immagine_event_item">Immagine event Item</string>
    <string name="color">Colore :</string>
    <string name="new_event_create">Hai creato un nuovo evento!</string>
    <string name="add_more_interests">Prova ad aggiungere nuovi interessi!</string>

    <!-- Errors-->
    <string name="error_retrieving_weather"> errore nel caricamento del weather</string>
    <string name="error_sending_confermation_email"> Errore durante invio della mail</string>
    <string name="error_on_API">Errore API</string>
    <string name="unexpected_error"> Errore inaspettato</string>
    <string name="location_missing"> luogo mancante</string>
    <string name="some_fields_must_be_empty"> Alcuni campi sono mancanti</string>
    <string name="error_retrieving_events"> Errore nel caricamento degli eventi</string>
    <string name="user_already_logged_error"> Utente già autenticato</string>
    <string name="user_not_logged_error"> Utente non autenticato</string>
    <string name="signup_error"> Errore nella registrazione</string>
    <string name="signin_error"> Errore nell\'autenticazione</string>
    <string name="session_refresh_error"> Errore nel refresh della sessione</string>
    <string name="user_local_fetch_error"> Errore durante il caricamento dei dati dell\'utente dal locale</string>
    <string name="user_local_update_error"> Errore durante l\'aggiornamento dei dati dell\'utente in locale</string>
    <string name="user_local_creation_error"> Errore durante la creazione dei dati dell\'utente in locale</string>
    <string name="user_local_deletion_error"> Errore durante la cancellazione dei dati dell\'utente in locale</string>
    <string name="user_remote_fetch_error"> Errore durante il caricamento dei dati dell\'utente da remoto</string>
    <string name="user_remote_update_error"> Errore durante l\'aggiornamento dei dati dell\'utente su remoto</string>
    <string name="interest_local_fetch_error"> Errore nel caricamento degli interessi da locale</string>
    <string name="interest_local_creation_error"> Errore nella creazione degli interessi in locale</string>
    <string name="interest_local_deletion_error"> Errore nella cancellazione degli interessi in locale</string>
    <string name="interest_remote_fetch_error"> Errore nel caricamento degli interessi da remoto</string>
    <string name="interest_remote_creation_error"> Errore nella creazione degli interessi su remoto</string>
    <string name="event_remote_creation_error"> Errore nella creazione dell\'evento su remoto</string>
    <string name="event_remote_fetch_error"> Errore nel caricamento dell\'evento da remoto</string>
    <string name="event_remote_update_error"> Errore durante l\'aggiornamento dell\'evento su remoto</string>
    <string name="participation_remote_creation_error"> Errore durante la creazione di una partecipazione su remoto</string>
    <string name="participation_remote_fetch_error"> Errore durante il caricamento di una partecipazione da remoto</string>
    <string name="participation_remote_deletion_error"> Errore durante la cancellazione di una partecipazione su remoto</string>
    <string name="failed_operation"> Impossibile completare l\'operazione richiesta</string>
    <string name="emailNotReceived">"Non hai ricevuto nessuna mail?"</string>
    <string name="username_already_in_use"> Username già in uso</string>
    <string name="email_already_in_use"> Email già in uso</string>
    <string name="signup_failed"> Registrazione fallita </string>
    <string name="logout_error"> Si è verificato un errore durante il logout</string>
    <string name="email_reset_password_sending_error"> Impossibile inviare la mail di ripristino password</string>
    <string name="informationRequiredError">Questo campo è obbligatorio</string>
    <string name="invalidEmail">Email non valida</string>
    <string name="place_not_found">Non ci sono posti con questo nome</string>
    <string name="API_multiple_search_error"> Errore API ricerca multipla</string>
    <string name="suggestions_not_found"> nessun suggerimento disponibile</string>
    <string name="no_places_available"> non ci sono luoghi disponibili</string>
    <string name="weather_error_far_day">Meteo non disponibile, massimo 16 giorni"</string>



</resources>