<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DiscoverSingleEvent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/eventListItem_imageView_background"
                android:layout_width="438dp"
                android:layout_height="199dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/background"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.518"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/seed"
               />

            <TextView
                android:id="@+id/discoverSingleEvent_textView_title"
                android:layout_width="315dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/ActivityName"
                android:textColor="@color/md_theme_light_onBackground"
                android:textColorHighlight="@color/md_theme_dark_background"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/eventListItem_imageView_background"
                app:layout_constraintStart_toStartOf="parent" />



            <com.google.android.material.chip.Chip
                android:id="@+id/fragmentDiscoverSingleEvent_chip_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Tag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discoverSingleEvent_textView_date" />

            <ImageView
                android:id="@+id/fragmentDiscoverSingleEvent_imageView_people"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/peopleNumber"
                app:layout_constraintBottom_toBottomOf="@+id/discoverSingleEvent_textView_numberOfParticipants"
                app:layout_constraintStart_toEndOf="@+id/discoverSingleEvent_textView_numberOfParticipants"
                app:layout_constraintTop_toTopOf="@+id/discoverSingleEvent_textView_numberOfParticipants"
                app:srcCompat="@drawable/baseline_people_outline_24"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/discoverSingleEvent_textView_numberOfParticipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/NumberOfParticipants"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/fragmentDiscoverSingleEvent_chip_category"
                app:layout_constraintStart_toEndOf="@+id/fragmentDiscoverSingleEvent_chip_category"
                app:layout_constraintTop_toTopOf="@+id/fragmentDiscoverSingleEvent_chip_category" />


            <TextView
                android:id="@+id/discoverSingleEvent_textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Date"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_calendar_month_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventListItem_imageView_background" />

            <TextView
                android:id="@+id/discoverSingleEvent_textView_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/Time"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_access_time_24"
                app:layout_constraintBottom_toBottomOf="@+id/discoverSingleEvent_textView_date"
                app:layout_constraintStart_toEndOf="@+id/discoverSingleEvent_textView_date"
                app:layout_constraintTop_toTopOf="@+id/discoverSingleEvent_textView_date" />


            <View
                android:id="@+id/fragmentDiscoverSingleEvent_view_firstDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_theme_light_outlineVariant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentDiscoverSingleEvent_imageView_weather" />

            <TextView
                android:id="@+id/discoverSingleEvent_textView_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Street"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_place_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentDiscoverSingleEvent_view_firstDivider" />


            <TextView
                android:id="@+id/discoverSingleEvent_textView_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/km"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentDiscoverSingleEvent_view_firstDivider" />

            <View
                android:id="@+id/fragmentDiscoverSingleEvent_view_secondDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/md_theme_light_outlineVariant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discoverSingleEvent_textView_distance" />

            <Button
                android:id="@+id/discoverSingleEvent_button_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:text="@string/Join"
                android:textSize="24sp"
                android:textColor="@color/md_theme_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discoverSingleEvent_textView_description" />

            <TextView
                android:id="@+id/fragmentDiscoverSingleEvent_textView_descr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentDiscoverSingleEvent_view_secondDivider" />

            <TextView
                android:id="@+id/discoverSingleEvent_textView_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/Description"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragmentDiscoverSingleEvent_textView_descr" />

            <ImageView
                android:id="@+id/fragmentDiscoverSingleEvent_imageView_weather"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:contentDescription="@string/imageWeather"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventListItem_imageView_background"
                tools:src="@drawable/drawable_sun" />

            <TextView
                android:id="@+id/fragmentDiscoverSingleEvent_textView_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/fragmentDiscoverSingleEvent_imageView_weather"
                app:layout_constraintEnd_toEndOf="@+id/fragmentDiscoverSingleEvent_imageView_weather"
                tools:text="@string/temperature" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>